@@ -1,16 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST techne-0.1.tar.gz 4284769 RMD160 a84d80bafae87a8705bee8eda89964fd5f6f6b2b SHA1 f80e04b5d5b2b2846399ecb16b6a0f1bc5e6ee99 SHA256 3b649c0ed0bd48c334ff8b38a99333353615699d66ddd8e4419ac974dbe2a720
-DIST techne-0.2.1.tar.gz 16284678 RMD160 24eae1387a484fe9403d47e25ca35f81be32ccfa SHA1 35ff1a393a85f2bf1b2dc0c6f7f50a7bedc4a1c6 SHA256 c96f93690d15229824dc74c9d26612689894e2233f3ecfee9765ffb0f0f48b9c
-EBUILD techne-0.1.ebuild 784 RMD160 0ceb7c46897b3ee39fc08ab11af7efb9224a7bb0 SHA1 bc3bcb7890901c3447200e5395a49c47ecde8d91 SHA256 d265d1dfa72e3ef59f8c1a04e09c1ee39f31726ba5b6135ffab04f1634609fc6
-EBUILD techne-0.2.1.ebuild 704 RMD160 04ea340a2c7c87526cfefe477bec6486793e2b5d SHA1 5be3e100069658b344bd2b7e45d211cd92707e58 SHA256 ad0069988e2903658e036b2d9f3969b49e746b0b43f8027340456c80b5a6d31c
-MISC ChangeLog 449 RMD160 e6dd38afe8712b512b32fcc1fe0b1e58f2303a0a SHA1 865deeadbe547022381d1e4ac99186eb4f4243a8 SHA256 14302ea190f03387f4f574ad2b428b62298eba94225b04b54da13e5c411ebbab
-MISC metadata.xml 227 RMD160 c753f0ab6683073265c837dfb72139ce5c216d74 SHA1 a2177a395af330772ee9c423c82f194221706de6 SHA256 c60ce6b480f817438494ad1dcc3a22aeda4b654321539b14d329a6cdd1ad4ba2
+DIST techne-0.2.1.tar.gz 16284678 SHA256 c96f93690d15229824dc74c9d26612689894e2233f3ecfee9765ffb0f0f48b9c
+DIST techne-0.2.3.tar.gz 11996192 SHA256 ec946733d16bf8cce26f8d3c8fc346061965c9e4004eb3613eaf66c8d6d147f7 SHA512 50e9fe48aa51fc39f739674011e9e992ab3376bf1ada83304603c45006e12e389fa2c20ee85a965de0fbe78b75ec8500143b40ef675bafe77f3fee834d93dd3e WHIRLPOOL 88e94fd3be3b80680ec724db1970f4ef897f58b7093f39f6987fc492f3048ee4871e257d40e1409dc4a00498d8b6a1fd1a64c5f54c8f25010bdc3af5ea51b3f6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk26GTkACgkQknrdDGLu8JBDTgD+NGsh2m/xVlOENt9wZU82pI0q
-KF5VZxT811LEITGPkrsA/30yllScyd5X1JTQjZZLyW0qoDPQ/Oirwbr4ptHzASFX
-=hQqB
+iF4EAREIAAYFAlAHm6oACgkQknrdDGLu8JDQZwEAk0zO+GMru/p2sTrbRetO/TNP
+IDwIphk4ssQ82WT5t58A/3dMQ5tFsPi0QTTub4cl0yeTEZ4CHPpNaW/D/mtrodum
+=Qe3M
 -----END PGP SIGNATURE-----
